--- a/NBADataLake/.env
+++ b/NBADataLake/.env
@@ -1,3 +1,3 @@
 
-SPORTS_DATA_API_KEY=20f4462248314a2e8c133f6d3a91a66f
+SPORTS_DATA_API_KEY=
 NBA_ENDPOINT=https://api.sportsdata.io/v3/nba/scores/json/Players
